--- a/static/css/base.css
+++ b/static/css/base.css
@@ -1,94 +1,36 @@
-body {
-    background-color: black;
-    color: white;
+html, body {
+      margin: 0;
+      padding: 0;
+      width: 100%;
+      height: 100%;
+      overflow: hidden;
+    }
+
+#terminal {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-color: black;
+  color: white;
+}
+
+.terminal {
+    letter-spacing: 2px;
+}
+
+#terminal .terminal-error {
+  color: red;
+}
+
+
+.terminal,
+span {
+    --size: 1.1;
     font-family: "Courier New", Courier, monospace;
-    font-size: 14px;
-    margin: 0;
-    padding: 0;
+    letter-spacing: 0px;
 }
 
-.container {
-    display: flex;
-    flex-direction: column;
-    height: 100vh;
-    padding: 10px;
-}
-
-.header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    height: 25px;
-    background-color: #555;
-    border-radius: 5px 5px 0 0;
-    padding: 5px 10px;
-    box-shadow: 0 1px 0 rgba(255, 255, 255, 0.1);
-}
-
-.header .buttons {
-    display: flex;
-    align-items: center;
-    gap: 5px;
-}
-
-.header .button {
-    width: 12px;
-    height: 12px;
-    border-radius: 50%;
-}
-
-.header .button.red {
-    background-color: #ff605c;
-}
-
-.header .button.yellow {
-    background-color: #ffc547;
-}
-
-.header .button.green {
-    background-color: #44db5e;
-}
-
-.main {
-    flex: 1;
-    overflow-y: auto;
-    padding: 10px;
-    line-height: 1.5;
-}
-
-.input-container {
-    display: flex;
-    align-items: center;
-    margin-top: 10px;
-}
-
-.input-container input {
-    background-color: transparent;
-    border: none;
-    color: white;
-    font-family: "Courier New", Courier, monospace;
-    font-size: 14px;
-    flex: 1;
-    padding: 5px;
-    border-radius: 5px;
-    box-shadow: 0 1px 0 rgba(255, 255, 255, 0.1);
-    margin-right: 5px;
-}
-
-.input-container button {
-    background-color: #555;
-    color: white;
-    border: none;
-    padding: 5px 10px;
-    border-radius: 5px;
-    box-shadow: 0 1px 0 rgba(255, 255, 255, 0.1);
-    cursor: pointer;
-}
-
-.prompt {
-    color: #00ff41;
-}
-
-.command {
-    color: white;
+.terminal-cursor {
+  background-color: #7a7a7a;
+  color: #ee2e2e;
 }
